syntax = "proto3";

package pb;

option go_package = "github.com/mark3d-xyz/mark3d/authserver-pb";

message UserProfile {
  string avatarURL = 1;
  string bannerURL = 2;
  string bio = 3;
  string name = 4;
  string username = 5;
  string websiteURL = 6;
  string email = 7;
  string twitter = 8;
}

message GetUserProfileRequest {
  string identification = 1;
}

message SetEmailRequest {
  string email = 1;
}

message VerifyEmailRequest {
  string secretToken = 1;
}